# GOL-glsl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: glu.hpp  primitives.hpp  shader.hpp  simulation.hpp  texture.hpp
shaders/: shader.comp.glsl  shader.frag.glsl  shader.vert.glsl
src/: main.cpp  primitives.cpp  shader.cpp  texture.cpp
